# teletransformer

./: pyproject.toml  teletransformer.code-workspace
src/teletransformer/: __init__.py  __main__.py  config.py  filemanager.py  main.py  preprocessing.py  transformer.py
src/teletransformer/extractors/: ericsson.py  nokia.py  timvolte.py  vivovolte.py
tests/: teletransformer.toml
