[project]
name = "teletransformer"
version = "0.1.0"
description = "Python Transformer for Call Details Records ( CDRs ) from Brazilian Telecommunications Carriers"
readme = "README.md"
authors = [
    { name = "Maxwel de Souza Freitas", email = "maxwel@maxwelfreitas.com.br" }
]
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.7.3",
    "dask[distributed]>=2025.5.1",
    "flatdict>=4.0.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
]

[project.scripts]
teletransformer = "teletransformer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
